--- a/myapp/views/index.tt
+++ b/myapp/views/index.tt
@@ -2,7 +2,7 @@
 <div class="navbar">
   <div class="navbar-inner">
     <div class="container">
-	<h3><a class="brand" href="http://perldancer.org"><img src="images/dancer_man.png"> Perl Dancer</a></h3>
+	<h3><a class="brand" href="http://perldancer.org"><img src="images/dancer_man.png"> QRPlop - Somewhere to kick your boots of and plop your QRs.</a></h3>
     </div>
   </div>
 </div>
@@ -18,73 +18,25 @@
 <div class="page-header">
 	<div class="row">
 		<div class="span12">
-			<h1>Dancer Template, now with more cowbell</h1>
+			<h1>QRPlop, a place where you jam stuff in the tubes and QR at it.</h1>
 		</div>
 	</div>
 </div>
 
 
 <div class="row">
-	<div class="span4">
-		<h2><i class="icon-twitter-sign icon-large"></i> Twitter Bootstrap</h2>
-		<p>
-		Twitter's <a target="_blank" href="http://twitter.github.com/bootstrap/index.html">bootstrap</a> is a simple and flexible HTML, CSS, and Javascript for popular user interface components and interactions.
-		</p>
-		<p>
-		This <b>Dancer</b> template is pre-configured to use bootstrap, and contains a script to easily upgrade to the latest bootstrap version.
-		</p>
-	</div>
-
-	<div class="span4">
-		<h2><i class="icon-flag icon-large"></i> Font-Awesome</h2>
-		<p>
-		Fort-Awesome's <a target="_blank" href="http://fortawesome.github.com/Font-Awesome/">Font-Awesome</a> is an iconic font designed for use with Twitter Bootstrap (overriding bootstrap's default "glyphicons" set).
-		</p>
-		<p>
-		This <b>Dancer</b> template is pre-configured to use Font-Awesome, and contains a script to easily upgrade to the latest Font-Awesome version.
-		</p>
-	</div>
-
-	<div class="span4">
-		<h2><i class="icon-cogs icon-large"></i> JQuery-1.7.2</h2>
-		<p>
-		<a target="_blank" href="http://jquery.com/">jQuery</a> is a fast and concise JavaScript Library that simplifies HTML document traversing, event handling, animating, and Ajax interactions for rapid web development.
-		</p>
-		<p>
-		Dancer always used JQuery by default, so there's nothing really new here, except upgrading to 1.7.2 (and not using CDN).
-		</p>
-	</div>
-</div>
-
-<div class="row">
-	<div class="span4">
-		<h2><i class="icon-random icon-large"></i> Template::Toolkit</h2>
-		<p>
-		<a target="_blank" href="http://template-toolkit.org/">Template::Toolkit</a> is a fast, flexible and highly extensible template processing system.
-		</p>
-		<p>
-		Dancer always worked with Template::Toolkit, so there's nothing really new here, except:
-		<ul>
-			<li>Dancer's default template was <a href="https://metacpan.org/module/Template::Simple" target="_blank">Template::Simple</a>, and in this template it's changed to the more powerful Template::Toolkit.</li>
-			<li>Dancer's default tags were <span class="label">&lt;%</span> and <span class="label">%&gt;</span>,<br/>and in this template there are changed to <span class="label">[&#37;</span> and <span class="label">&#37;]</span>,
-		</ul>
-
-		</p>
-
-	</div>
-
-	<div class="span4">
-		<h2><i class="icon-music icon-large"></i> Dancer inside</h2>
-		<a href="http://perldancer.org" target="_blank">What more could you ask for?
-		<br/>
-		<img src="images/dancer_star.png">
-		</a>
-	</div>
-
-	<div class="span4">
-		<h2><i class="icon-gift icon-large"></i> One more random icon</h2>
-		With some lorem ipsum for completeness:<br/>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultricies risus non metus pulvinar adipiscing. Nullam euismod, massa et imperdiet lacinia, purus mi tincidunt sem, in convallis augue dolor id elit. Proin convallis velit a ipsum mattis in tristique arcu bibendum. Praesent luctus urna ut lacus gravida convallis. Proin sit amet lacus at sapien fringilla euismod. Pellentesque at sapien eget justo sagittis porta eu et nunc. In volutpat pulvinar nunc in rhoncus.
+	<div class="span12">
+		<h2><i class="icon-picture icon-large"></i> Upload a picture<h2>
+			<form class="well">
+			  <label>Select the pic</label>
+			  <input type="text" class="span3" placeholder="Type something…">
+			  <span class="help-block">Example block-level help text here.</span>
+			  <label class="checkbox">
+			    <input type="checkbox"> Check me out
+			  </label>
+			  <button type="submit" class="btn">Submit</button>
+			</form>
+			
 	</div>
 </div>
 
